crates/sql-orm/tests/ui/tracking_registry_internal_unavailable.stderr
error[E0599]: no method named `attach_registry` found for struct `sql_orm::Tracked<User>` in the current scope
  --> tests/ui/tracking_registry_internal_unavailable.rs:20:13
   |
20 |     tracked.attach_registry(());
   |             ^^^^^^^^^^^^^^^ method not found in `sql_orm::Tracked<User>`
